--- a/src/components/BgImage/BgImage.css
+++ b/src/components/BgImage/BgImage.css
@@ -46,6 +46,12 @@
     }
 }
 
+@media screen and (min-width: 768px) and (max-width: 1024px) and (min-height: 1024px) and (max-width: 1366px) {
+    .bgImage-Image {
+        width: 75%;
+    }
+}
+
 @media screen and (max-width: 800px) and (max-width: 500px) {
     .bgImage-Image {
         top: -140px;
