--- a/src/containers/Support/Support.css
+++ b/src/containers/Support/Support.css
@@ -199,3 +199,9 @@
         max-height: 65vh;
     }
 }
+
+@media screen and (max-width: 320px) and (max-height: 480px) {
+    .SupportContent-Questions {
+        max-height: 60vh;
+    }
+}
