--- a/src/containers/Us/Us.css
+++ b/src/containers/Us/Us.css
@@ -185,13 +185,27 @@
     }
 }
 
-@media screen and (max-width: 800px) and (max-width: 500px) {
+@media screen and (max-width: 500px) {
     .ImageUs {
         top: -140px;
         right: 0;
         width: 59vh;
         height: 59vh;
         left: 30%;
+    }
+}
+
+@media screen and (max-width: 375px) and (min-height: 812px) {
+    .ImageUs {
+        top: -145px;
+        right: 0;
+        width: 55vh;
+        height: 55vh;
+        left: 35%;
+    }
+    .Us {
+        align-items: center;
+        height: calc(100vh - 410px);
     }
 }
 
