--- a/src/containers/Us/Us.css
+++ b/src/containers/Us/Us.css
@@ -149,8 +149,9 @@
     }
     .Us {
         padding-top: 250px;
-        align-items: flex-start;
+        align-items: center;
         width: 90%;
+        height: calc(100vh - 410px);
     }
     .menu {
         top: 100px;
@@ -169,6 +170,9 @@
     .Us .UsContent-CambiaBits {
         width: 100%;
     }
+    .Us .UsContent-CambiaBits p:not(.UsContent-Title) {
+        font-size: 1.75rem;
+    }
     .Us {
         padding-top: 250px;
         align-items: center;
@@ -176,6 +180,9 @@
     }
     .menu {
         top: 200px;
+    }
+    .UsContent-Title {
+        font-size: 3.5rem;
     }
 }
 
@@ -209,21 +216,13 @@
     }
 }
 
-
-/* @media screen and (max-width: 600px) {
-    .ImageUs {
-        top: -15%;
-        right: -36%;
-        height: 57vh;
-        width: 57vh;
+@media screen and (max-width: 320px) and (max-height: 480px) {
+    .menu {
+        display: none;
+    }
+    .Us {
+        padding-top: 150px;
+        height: calc(100vh - 160px);
+        align-items: flex-start;
     }
 }
-
-@media screen and (max-width: 600px) and (min-height: 810px) {
-    .ImageUs {
-        top: -10%;
-        right: -22%;
-        height: 333px;
-        width: 333px;
-    }
-} */
