--- a/src/components/BgImage/BgImage.css
+++ b/src/components/BgImage/BgImage.css
@@ -71,37 +71,13 @@
             left: 35%;
         }
     }
-    /*
-@media screen and (min-width: 1366px) and (min-height: 1024px) {
-    .BgImage {
-        top: -22%;
-        right: -15%;
-        height: 80vh;
+    
+    @media screen and (max-width: 320px) and (max-height: 480px) {
+        .bgImage-Image {
+            top: -100px;
+            right: 0;
+            width: 56vh;
+            height: 56vh;
+            left: 30%;
+        }
     }
-}
-
-
-@media screen and (min-width: 1024px) and (min-height: 1366px) {
-    .BgImage {
-        top: -22%;
-        right: -40%;
-        height: 80vh;
-    }
-}
-
-
-@media screen and (max-width: 600px) {
-    .BgImage {
-        top: -15%;
-        right: -36%;
-        height: 57vh;
-    }
-}
-
-@media screen and (max-width: 600px) and (min-height: 810px) {
-    .BgImage {
-        top: -10%;
-        right: -22%;
-        height: 333px;
-    }
-} */
