--- a/src/containers/Us/Us.css
+++ b/src/containers/Us/Us.css
@@ -164,6 +164,9 @@
 }
 
 @media screen and (min-width: 768px) and (max-width: 1024px) and (min-height: 1024px) and (max-width: 1366px) {
+    .Us {
+        height: calc(100vh - 160px);
+    }
     .ImageUs {
         width: 75%;
     }
@@ -213,6 +216,12 @@
     .Us {
         align-items: center;
         height: calc(100vh - 410px);
+    }
+}
+
+@media screen and (max-width: 320px) {
+    .menu {
+        top: 75px;
     }
 }
 
